# computercard-dev-env

./: .gitattributes  .gitignore  .gitmodules  Makefile  README-development.md  README.md  start_openocd_host.ps1
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
ComputerCard_Examples/: .gitignore  CMakeLists.txt  ComputerCard.h  GNUmakefile  LICENSE  README.md  doxygen.conf
ComputerCard_Examples/UF2/: midi_device.uf2  midi_host.uf2
ComputerCard_Examples/examples/calibrated_cv_out/: main.cpp
ComputerCard_Examples/examples/midi_device/: main.cpp  usb_descriptors.c
ComputerCard_Examples/examples/midi_device_host/: main.cpp  tusb_config.h  usb_midi_host.h
ComputerCard_Examples/examples/midi_host/: main.cpp  tusb_config.h  usb_midi_host.c  usb_midi_host_app_driver.c
ComputerCard_Examples/examples/normalisation_probe/: main.cpp
ComputerCard_Examples/examples/sample_and_hold/: main.cpp
ComputerCard_Examples/examples/sample_upload/: README.md  generate_sample_uf2.html  main.cpp  wav.js
ComputerCard_Examples/examples/second_core/: main.cpp
ComputerCard_Examples/examples/sine_wave_float/: main.cpp
ComputerCard_Examples/examples/sine_wave_lookup/: main.cpp
ComputerCard_Examples/examples/usb_detect/: main.cpp
ComputerCard_Examples/examples/usb_serial/: main.cpp
XX_newcard/: .gitignore  CMakeLists.txt  main.cpp
XX_newcard/UF2/: passthru.uf2
boards/: computer.h
scripts/: bootstrap_workshop_computer.sh  build.sh  pico_auto_make.mk  start_openocd_host.sh  vscode_task_make.sh
